package com.pluralsight.view;

public interface Screen {
    void display();
}
